scroll element is now appended to target and target children are wrapped with another div. This should fix issues with hiding / moving the target and the scoll element not moving with it / sticking around removed depency on the position utility

--- a/jquery.jb.shortscroll.css
+++ b/jquery.jb.shortscroll.css
@@ -1,7 +1,30 @@
+/*
+ * ShortScroll - jQuery UI Widget 
+ * Copyright (c) 2010 Jesse Baird
+ *
+ * http://jebaird.com/blog/shortscroll-jquery-ui-google-wave-style-scroll-bar
+ *
+ * Depends:
+ *   - jQuery 1.4
+ *   - jQuery UI 1.8 (core, widget factory)
+ *   - jQuery mousewheel plugin - Copyright (c) 2010 Brandon Aaron (http://brandonaaron.net)
+ *
+ * Dual licensed under the MIT and GPL licenses:
+ *   http://www.opensource.org/licenses/mit-license.php
+ *   http://www.gnu.org/licenses/gpl.html
+ *
+ *  
+ *
+ *
+*/
 .jb-shortscroll-wrapper{
     display: block;
     width: 18px;
     z-index: 1500;
+    position: absolute;
+    top: 0px;
+    left: auto;
+    right: -10px;
 }
 .jb-shortscroll-wrapper .jb-shortscroll-track{
     width: 100%;
@@ -43,6 +66,9 @@
     border-left:1px solid #ABA9A9;
     border-right:1px solid #ABA9A9;
 }
+.ui-draggable-dragging .jb-shortscroll-scrollbar-middle{
+	cursor: move;
+}
 .jb-shortscroll-wrapper .jb-shortscroll-stopper{
     background: gray;
     border: 1px solid gray;
@@ -53,7 +79,18 @@
     width: 16px;
     opacity:0.7;
 }
-
+/*
+ * 
+ */
 .jb-shortscroll-target{
-    overflow:hidden;       
+    position: relative;       
+}
+/*
+ * this element wrapps target content
+ */
+.jb-shortscroll-target .jb-shortscroll-content{
+	overflow:hidden;
+	height: 100%;
+	width: 100%;
+    
 }
